--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "type": "module",
   "engines": {
     "node": ">=16.x"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node src/app.js",
     "dev": "vite"
   },
   "keywords": [],
